Mise en place du header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <header>
+        <ul>
+            <li>
+                <a href="#">Accueil</a>
+            </li>
 
+            <li>
+                <a href="#">A propos</a>
+            </li>
+
+            <li>
+                <a href="#">Blog</a>
+            </li>
+
+            <li>
+                <a href="#">Contact</a>
+            </li>
+
+        </ul>
     </header>
 
     <main>
@@ -19,6 +36,6 @@
     <footer>
 
     </footer>
-    
+
 </body>
 </html>
